--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           Web<span class="logo-part">Studio</span>
         </a>
         <ul class="header-nav-list">
-          <li><a class="header-menu" href="./index.html">Studio</a></li>
+          <li><a class="header-menu active" href="./index.html">Studio</a></li>
           <li><a class="header-menu" href="">Portfolio</a></li>
           <li><a class="header-menu" href="">Contacts</a></li>
         </ul>
@@ -59,6 +59,9 @@
         <h2 class="visually-hidden">Values</h2>
         <ul class="values-list">
           <li class="values-item">
+            <svg class="values-icon" width="64" height="64">
+              <use href="./images/icons.svg#icon-antenna-1"></use>
+            </svg>
             <h3 class="values-caption">Strategy</h3>
             <p class="values-desc">
               Our goal is to identify the business problem to walk away with the
@@ -66,6 +69,9 @@
             </p>
           </li>
           <li class="values-item">
+            <svg class="values-icon" width="64" height="64">
+              <use href="./images/icons.svg#icon-clock-1"></use>
+            </svg>
             <h3 class="values-caption">Punctuality</h3>
             <p class="values-desc">
               Bring the key message to the brand's audience for the best price
@@ -73,6 +79,9 @@
             </p>
           </li>
           <li class="values-item">
+            <svg class="values-icon" width="64" height="64">
+              <use href="./images/icons.svg#icon-diagram-1"></use>
+            </svg>
             <h3 class="values-caption">Diligence</h3>
             <p class="values-desc">
               Research and confirm brands that present the strongest digital
@@ -80,6 +89,9 @@
             </p>
           </li>
           <li class="values-item">
+            <svg class="values-icon" width="64" height="64">
+              <use href="./images/icons.svg#icon-astronaut-1"></use>
+            </svg>
             <h3 class="values-caption">Technologies</h3>
             <p class="values-desc">
               Design practice focused on digital experiences. We bring forth a
@@ -238,6 +250,34 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
+    <!--social-->
+    <div class="socials-column">
+      <p class="footer-title">Social media</p>
+      <ul class="socials">
+        <li class="socials-list">
+          <a class="social-icons" href="http://instagram.com">
+            <svg class="icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials-list">
+          <svg class="icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg>
+        </li>
+        <li class="socials-list">
+          <svg class="icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </li>
+        <li class="socials-list">
+          <svg class="icon" width="24" height="24">
+            <use href="./images/icons.svg#icons-linkedin"></use>
+          </svg>
+        </li>
+      </ul>
     </div>
   </footer>
 </html>
