--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <ul class="values-list">
           <li class="values-item">
             <svg class="values-icon" width="64" height="64">
-              <use href="./images/icons.svg#icon-antenna-1"></use>
+              <use href="./images/icons.svg#icon-antenna"></use>
             </svg>
             <h3 class="values-caption">Strategy</h3>
             <p class="values-desc">
@@ -70,7 +70,7 @@
           </li>
           <li class="values-item">
             <svg class="values-icon" width="64" height="64">
-              <use href="./images/icons.svg#icon-clock-1"></use>
+              <use href="./images/icons.svg#icon-clock"></use>
             </svg>
             <h3 class="values-caption">Punctuality</h3>
             <p class="values-desc">
@@ -80,7 +80,7 @@
           </li>
           <li class="values-item">
             <svg class="values-icon" width="64" height="64">
-              <use href="./images/icons.svg#icon-diagram-1"></use>
+              <use href="./images/icons.svg#icon-diagram"></use>
             </svg>
             <h3 class="values-caption">Diligence</h3>
             <p class="values-desc">
@@ -90,7 +90,7 @@
           </li>
           <li class="values-item">
             <svg class="values-icon" width="64" height="64">
-              <use href="./images/icons.svg#icon-astronaut-1"></use>
+              <use href="./images/icons.svg#icon-astronaut"></use>
             </svg>
             <h3 class="values-caption">Technologies</h3>
             <p class="values-desc">
@@ -251,30 +251,11 @@
         marketing & growth solutions.
       </p>
     </div>
-    <!--social-->
-    <div class="socials-column">
-      <p class="footer-title">Social media</p>
-      <ul class="socials">
-        <li class="socials-list">
-          <a class="social-icons" href="http://instagram.com">
-            <svg class="icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="socials-list">
+    <div class="cosials">
+      <ul>
+        <li class="cosial-icons">
           <svg class="icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-twitter"></use>
-          </svg>
-        </li>
-        <li class="socials-list">
-          <svg class="icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-facebook"></use>
-          </svg>
-        </li>
-        <li class="socials-list">
-          <svg class="icon" width="24" height="24">
-            <use href="./images/icons.svg#icons-linkedin"></use>
+            <use href="./images/icons.svg#icon-instagram"></use>
           </svg>
         </li>
       </ul>
