--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           Web<span class="logo-part">Studio</span>
         </a>
         <ul class="header-nav-list">
-          <li><a class="header-menu active" href="./index.html">Studio</a></li>
+          <li><a class="header-menu" href="./index.html">Studio</a></li>
           <li><a class="header-menu" href="">Portfolio</a></li>
           <li><a class="header-menu" href="">Contacts</a></li>
         </ul>
@@ -79,9 +79,6 @@
             </p>
           </li>
           <li class="values-item">
-            <svg class="values-icon" width="64" height="64">
-              <use href="./images/icons.svg#icon-diagram"></use>
-            </svg>
             <h3 class="values-caption">Diligence</h3>
             <p class="values-desc">
               Research and confirm brands that present the strongest digital
@@ -89,9 +86,6 @@
             </p>
           </li>
           <li class="values-item">
-            <svg class="values-icon" width="64" height="64">
-              <use href="./images/icons.svg#icon-astronaut"></use>
-            </svg>
             <h3 class="values-caption">Technologies</h3>
             <p class="values-desc">
               Design practice focused on digital experiences. We bring forth a
@@ -250,15 +244,6 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-    </div>
-    <div class="cosials">
-      <ul>
-        <li class="cosial-icons">
-          <svg class="icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-instagram"></use>
-          </svg>
-        </li>
-      </ul>
     </div>
   </footer>
 </html>
