--- a/index.html
+++ b/index.html
@@ -130,30 +130,38 @@
                 <ul class="socials">
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                      <a class="sotial-icons" href="https://instagram">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                      <a class="social-icons" href="https://x.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a class="sotial-icons" href="https://facebook.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a class="social-icons" href="https://linkedin.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                 </ul>
@@ -173,30 +181,38 @@
                 <ul class="socials">
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                      <a class="sotial-icons" href="https://instagram">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                      <a class="social-icons" href="https://x.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a class="sotial-icons" href="https://facebook.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a class="social-icons" href="https://linkedin.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                 </ul>
@@ -216,30 +232,38 @@
                 <ul class="socials">
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                      <a class="sotial-icons" href="https://instagram">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                      <a class="social-icons" href="https://x.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a class="sotial-icons" href="https://facebook.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a class="social-icons" href="https://linkedin.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                 </ul>
@@ -259,30 +283,38 @@
                 <ul class="socials">
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
+                      <a class="sotial-icons" href="https://instagram">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
+                      <a class="social-icons" href="https://x.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
+                      <a class="sotial-icons" href="https://facebook.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                   <li class="socials-list-team">
                     <div class="icon-wrapper">
-                      <svg class="icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
+                      <a class="social-icons" href="https://linkedin.com">
+                        <svg class="icon" width="24" height="24">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
                     </div>
                   </li>
                 </ul>
@@ -442,30 +474,38 @@
           <ul class="socials">
             <li class="socials-list">
               <div class="icon-wrapper">
-                <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
+                <a class="social-icons" href="https://x.com">
+                  <svg class="icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="socials-list">
               <div class="icon-wrapper">
-                <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
+                <a class="social-icons" href="https://x.com">
+                  <svg class="icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="socials-list">
               <div class="icon-wrapper">
-                <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
+                <a class="sotial-icons" href="https://facebook.com">
+                  <svg class="icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="socials-list">
               <div class="icon-wrapper">
-                <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
+                <a class="social-icons" href="https://linkedin.com">
+                  <svg class="icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
           </ul>
