--- a/index.html
+++ b/index.html
@@ -198,22 +198,18 @@
                     </div>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="sotial-icons" href="https://facebook.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="sotial-icons" href="https://facebook.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="social-icons" href="https://linkedin.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="social-icons" href="https://linkedin.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -231,40 +227,32 @@
                 <p class="team-desc">Marketing</p>
                 <ul class="socials">
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="sotial-icons" href="https://instagram">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="sotial-icons" href="https://instagram">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="social-icons" href="https://x.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="social-icons" href="https://x.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="sotial-icons" href="https://facebook.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="sotial-icons" href="https://facebook.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="social-icons" href="https://linkedin.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="social-icons" href="https://linkedin.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -282,40 +270,32 @@
                 <p class="team-desc">UI Designer</p>
                 <ul class="socials">
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="sotial-icons" href="https://instagram">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="sotial-icons" href="https://instagram">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="social-icons" href="https://x.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="social-icons" href="https://x.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="sotial-icons" href="https://facebook.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="sotial-icons" href="https://facebook.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="social-icons" href="https://linkedin.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="social-icons" href="https://linkedin.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -473,40 +453,32 @@
           <p class="footer-title">Social media</p>
           <ul class="socials">
             <li class="socials-list">
-              <div class="icon-wrapper">
-                <a class="social-icons" href="https://x.com">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </div>
+              <a class="social-icons" href="https://x.com">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="socials-list">
-              <div class="icon-wrapper">
-                <a class="social-icons" href="https://x.com">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </div>
+              <a class="social-icons" href="https://x.com">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="socials-list">
-              <div class="icon-wrapper">
-                <a class="sotial-icons" href="https://facebook.com">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </div>
+              <a class="social-icons" href="https://facebook.com">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="socials-list">
-              <div class="icon-wrapper">
-                <a class="social-icons" href="https://linkedin.com">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </div>
+              <a class="social-icons" href="https://linkedin.com">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
