--- a/index.html
+++ b/index.html
@@ -129,40 +129,32 @@
                 <p class="team-desc">Product Designer</p>
                 <ul class="socials">
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="sotial-icons" href="https://instagram">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="social-icons" href="https://instagram">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="social-icons" href="https://x.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="social-icons" href="https://x.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="sotial-icons" href="https://facebook.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="social-icons" href="https://facebook.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="social-icons" href="https://linkedin.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="social-icons" href="https://linkedin.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -180,25 +172,21 @@
                 <p class="team-desc">Frontend Developer</p>
                 <ul class="socials">
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="sotial-icons" href="https://instagram">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="social-icons" href="https://instagram">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <div class="icon-wrapper">
-                      <a class="social-icons" href="https://x.com">
-                        <svg class="icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a class="social-icons" href="https://x.com">
+                      <svg class="icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="sotial-icons" href="https://facebook.com">
+                    <a class="social-icons" href="https://facebook.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -227,7 +215,7 @@
                 <p class="team-desc">Marketing</p>
                 <ul class="socials">
                   <li class="socials-list-team">
-                    <a class="sotial-icons" href="https://instagram">
+                    <a class="social-icons" href="https://instagram">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -241,7 +229,7 @@
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="sotial-icons" href="https://facebook.com">
+                    <a class="social-icons" href="https://facebook.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
@@ -270,7 +258,7 @@
                 <p class="team-desc">UI Designer</p>
                 <ul class="socials">
                   <li class="socials-list-team">
-                    <a class="sotial-icons" href="https://instagram">
+                    <a class="social-icons" href="https://instagram">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
@@ -284,7 +272,7 @@
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="sotial-icons" href="https://facebook.com">
+                    <a class="social-icons" href="https://facebook.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
