--- a/index.html
+++ b/index.html
@@ -256,30 +256,30 @@
               <div class="team-info">
                 <h3 class="team-caption">Daniel Wilson</h3>
                 <p class="team-desc">UI Designer</p>
-                <ul class="socials">
+                <ul class="socials-team">
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://instagram">
+                    <a class="social-icons-team" href="https://instagram">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://x.com">
+                    <a class="social-icons-team" href="https://x.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://facebook.com">
+                    <a class="social-icons-team" href="https://facebook.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://linkedin.com">
+                    <a class="social-icons-team" href="https://linkedin.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
