--- a/index.html
+++ b/index.html
@@ -127,30 +127,30 @@
               <div class="team-info">
                 <h3 class="team-caption">Mark Guerrero</h3>
                 <p class="team-desc">Product Designer</p>
-                <ul class="socials">
+                <ul class="socials-team">
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://instagram">
+                    <a class="social-icons-team" href="https://instagram">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://x.com">
+                    <a class="social-icons-team" href="https://x.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://facebook.com">
+                    <a class="social-icons-team" href="https://facebook.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://linkedin.com">
+                    <a class="social-icons-team" href="https://linkedin.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -170,30 +170,30 @@
               <div class="team-info">
                 <h3 class="team-caption">Tom Ford</h3>
                 <p class="team-desc">Frontend Developer</p>
-                <ul class="socials">
+                <ul class="socials-team">
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://instagram">
+                    <a class="social-icons-team" href="https://instagram">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://x.com">
+                    <a class="social-icons-team" href="https://x.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://facebook.com">
+                    <a class="social-icons-team" href="https://facebook.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://linkedin.com">
+                    <a class="social-icons-team" href="https://linkedin.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -213,30 +213,30 @@
               <div class="team-info">
                 <h3 class="team-caption">Camila Garcia</h3>
                 <p class="team-desc">Marketing</p>
-                <ul class="socials">
+                <ul class="socials-team">
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://instagram">
+                    <a class="social-icons-team" href="https://instagram">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://x.com">
+                    <a class="social-icons-team" href="https://x.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://facebook.com">
+                    <a class="social-icons-team" href="https://facebook.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-team">
-                    <a class="social-icons" href="https://linkedin.com">
+                    <a class="social-icons-team" href="https://linkedin.com">
                       <svg class="icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
