--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     </main>
     <!--finish-->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <div class="footer-column">
           <a href="./index.html" class="footer-logo">
             Web<span class="logo-text">Studio</span>
