--- a/index.html
+++ b/index.html
@@ -417,13 +417,15 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-column">
-          <a href="./index.html" class="footer-logo">
-            Web<span class="logo-text">Studio</span>
-          </a>
-          <p class="footer-desc">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+          <div class="block">
+            <a href="./index.html" class="footer-logo">
+              Web<span class="logo-text">Studio</span>
+            </a>
+            <p class="footer-desc">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
         </div>
         <div class="footer-column">
           <p class="footer-title">Social media</p>
